Added task five

--- a/JavaScript Fundamentals/Homeworks/Conditional Statements/05. Digit As Word/digitAsWord.html
+++ b/JavaScript Fundamentals/Homeworks/Conditional Statements/05. Digit As Word/digitAsWord.html
@@ -12,7 +12,9 @@
 	</header>
 
 	<div id="input">
-
+		<label for="inputForm">Enter a number (0-9)</label>
+		<input id="inputForm"><br>
+		<button onclick="digitAsWord()">Submit</button>
 	</div>
 
 	<div id="console">
