--- a/JavaScript Fundamentals/Homeworks/Loops/01. Numbers/numbers.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/01. Numbers/numbers.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Numbers</title>
 	<script src="numbers.js"></script>
+	<link href="../styles/styles.css"/>
 </head>
 <body>
 	<header>
