--- a/JavaScript Fundamentals/Homeworks/Loops/02. Numbers Not Divisible/notDivisibleNumbers.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/02. Numbers Not Divisible/notDivisibleNumbers.html
@@ -3,6 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<script src="notDivisibleNumbers.js"></script>
+	<link href="../styles/styles.css"/>
 	<title>Not Divisible Numbers </title>
 </head>
 <body>
