Updates styles.css Fixed Bugs

--- a/JavaScript Fundamentals/Homeworks/Conditional Statements/01. ExchangeIfGreater/exchangeIfGreater.html
+++ b/JavaScript Fundamentals/Homeworks/Conditional Statements/01. ExchangeIfGreater/exchangeIfGreater.html
@@ -3,6 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Exchange If Greater</title>
+	<link rel="stylesheet" href="../styles/styles.css">
 	<script src="exchangeIfGreater.js"> </script>
 </head>
 <body>
@@ -16,7 +17,7 @@
 		<input type="text" id="inputFormOne">
 		<label for="inputFormTwo">Enter second number</label>
 		<input type="text" id="inputFormTwo">
-		<button onclick="exchangeIfGreater()"> Button </button> <br>
+		<button id="button" onclick="exchangeIfGreater()"> Button </button> <br>
 	</div>
 
 	<div id="console">
