--- a/JavaScript Fundamentals/Homeworks/Loops/01. Numbers/numbers.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/01. Numbers/numbers.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Numbers</title>
 	<script src="numbers.js"></script>
-	<link href="../styles/styles.css"/>
+	<link rel="stylesheet" href="../styles/styles.css"/>
 </head>
 <body>
 	<header>
@@ -13,9 +13,9 @@
 	</header>
 
 	<div id="input">
-		<label for="inputForm">Enter a number</label>
-		<input id="inputForm"> <br>
-		<button onclick="printNumbers()">Submit</button>
+		<label for="inputForm">Enter a number</label> <br>
+		<input id="inputForm" placeholder="Example: 3">
+		<button id="button" onclick="printNumbers()">Submit</button>
 	</div>
 
 	<div id="console">
