--- a/JavaScript Fundamentals/Homeworks/Loops/04. Lexicographically Smallest/lexSmallest.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/04. Lexicographically Smallest/lexSmallest.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Lexicographically Smallest</title>
-	<link ref="stylesheet" href="../styles/styles.css"/>
+	<link rel="stylesheet" href="../styles/styles.css"/>
 	<script src="lexSmallest.js"></script>
 </head>
 <body>
