--- a/JavaScript Fundamentals/Homeworks/Conditional Statements/02. Multiplication Sign/multiplicationSign.html
+++ b/JavaScript Fundamentals/Homeworks/Conditional Statements/02. Multiplication Sign/multiplicationSign.html
@@ -3,6 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<script src="multiplicationSign.js"></script>
+	<link rel="stylesheet" href="../styles/styles.css">
 	<title>Multiplication Sign</title>
 </head>
 <body>
@@ -12,13 +13,13 @@
 	</header>
 
 	<div id="input">
-		<label for="inputOne">Enter first number</label>
-		<input type="text" id="inputOne"> <br>
-		<label for="inputTwo">Enter second number</label>
-		<input type="text" id="inputTwo"> <br>
-		<label for="inputThree">Enter third number</label>
-		<input type="text" id="inputThree"> <br>
-		<button onclick="multiplicationSign()"> Submit </button>
+		<label for="inputFormOne">Enter first number</label>
+		<input type="text" id="inputFormOne"> <br>
+		<label for="inputFormTwo">Enter second number</label>
+		<input type="text" id="inputFormTwo"> <br>
+		<label for="inputFormThree">Enter third number</label>
+		<input type="text" id="inputFormThree"> <br>
+		<button id="button" onclick="multiplicationSign()"> Submit </button>
 	</div>
 
 	<div id="console">
