--- a/JavaScript Fundamentals/Homeworks/Conditional Statements/05. Digit As Word/digitAsWord.html
+++ b/JavaScript Fundamentals/Homeworks/Conditional Statements/05. Digit As Word/digitAsWord.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Digit As Word</title>
 	<script src="digitAsWord.js"></script>
+	<link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
 	<header>
@@ -14,7 +15,7 @@
 	<div id="input">
 		<label for="inputForm">Enter a number (0-9)</label>
 		<input id="inputForm"><br>
-		<button onclick="digitAsWord()">Submit</button>
+		<button id="button" onclick="digitAsWord()">Submit</button>
 	</div>
 
 	<div id="console">
