--- a/JavaScript Fundamentals/Homeworks/Loops/02. Numbers Not Divisible/notDivisibleNumbers.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/02. Numbers Not Divisible/notDivisibleNumbers.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<script src="notDivisibleNumbers.js"></script>
-	<link href="../styles/styles.css"/>
+	<link rel="stylesheet" href="../styles/styles.css"/>
 	<title>Not Divisible Numbers </title>
 </head>
 <body>
@@ -14,8 +14,8 @@
 
 	<div id="input">
 		<label for="inputForm">Please enter a number n</label>
-		<input id="inputForm"> <br>
-		<button onclick="notDivisibleNumbers()">Submit</button>
+		<input id="inputForm">
+		<button id="button" onclick="notDivisibleNumbers()">Submit</button>
 	</div>
 
 	<div id="console">
