Finished Homework/Windows 8 Image/index.html

--- a/JavaScript UI & DOM/Scalable Vector Graphic/Homework/Windows 8 Image/index.html
+++ b/JavaScript UI & DOM/Scalable Vector Graphic/Homework/Windows 8 Image/index.html
@@ -9,6 +9,12 @@
 	<svg width="1050" height="650" id="the-svg">
 		<!-- Title -->
 
+		<text x="90" y="75" font-size="40" fill="lightgray" font-family="Segoe UI light">Start</text>
+		<text x="890" y="70" font-size="25" fill="lightgray" font-family="Segoe UI light">Toshko</text>
+		<text x="920" y="90" font-size="15" fill="lightgray" font-family="Segoe UI light">Popov</text>
+		<image x="965" y="50" height="50" width="60" xlink:href="../images/me.jpg"></image>
+
+
 		<!-- First Row -->
 
 		<rect x="90" y="130" height="100" width="100" fill="#2876F2"></rect>
@@ -80,27 +86,43 @@
 		<image x="530" y="350" height="100" width="100" xlink:href="../images/pinball.png"></image>
 
 		<rect x="640" y="350" height="100" width="100" fill="#2876F2"></rect>
-		
+		<image x="650" y="370" height="55" width="80" xlink:href="../images/solitaire.png"></image>
+		<text x="655" y="440" font-size="12" fill="white" font-weight="600" font-family="Segoe UI light">Solitaire</text>
 
 		<rect x="760" y="350" height="100" width="100" fill="#DA542E"></rect>
+		<image x="770" y="365" height="55" width="80" xlink:href="../images/reader.png"></image>
+		<text x="775" y="440" font-size="12" fill="white" font-weight="600" font-family="Segoe UI light">Reader</text>
 
 		<rect x="870" y="350" height="100" width="100" fill="#052967"></rect>
+		<image x="880" y="415" height="30" width="30" xlink:href="../images/WindowsExplorer.png"></image>
+		<text x="880" y="380" font-size="16" fill="#D8EDEF" font-weight="600" font-family="Segoe UI light">WIndows</text>
+		<text x="880" y="400" font-size="16" fill="#D8EDEF" font-weight="600" font-family="Segoe UI light">Explorer</text>
 
 		<rect x="980" y="350" height="100" width="70" fill="#2876F2"></rect>
+		<image x="990" y="370" height="60" width="60" xlink:href="../images/skyDrive.png"></image>
+		<text x="990" y="440" font-size="12" fill="#D8EDEF" font-weight="600" font-family="Segoe UI light">SkyDrive</text>
 
 		<!-- Fourth Row -->
 
 		<rect x="90" y="460" height="100" width="210" fill="#24909D" stroke="none"></rect>
 		<image x="90" y="460" height="100" width="210" xlink:href="../images/betafish.jpg"></image>
+		<text x="100" y="550" font-size="12" fill="white" font-family="Segoe UI light">Desktop</text>
 
 		<rect x="310" y="460" height="100" width="210" fill="#2876F2"></rect>
+		<text x="320" y="550" font-size="12" fill="white" font-family="Segoe UI light">Weather</text>
+		<image x="375" y="475" height="55" width="80" xlink:href="../images/weather.png"></image>
 
 		<rect x="530" y="460" height="100" width="100" fill="#B01A40"></rect>
 		<image x="550" y="480" height="60" width="60" xlink:href="../images/camera.png"></image>
+		<text x="540" y="550" font-size="12" fill="white" font-family="Segoe UI light">Camera</text>
 
 		<rect x="640" y="460" height="100" width="100" fill="#61A91F"></rect>
+		<image x="660" y="475" height="60" width="60" xlink:href="../images/xboxcom.png"></image>
+		<text x="650" y="550" font-size="12" fill="white" font-family="Segoe UI light">Xbox Companion</text>
 
-		<rect x="760" y="460" height="100" width="210" fill="#DA542E"></rect>
+		<rect x="760" y="460" height="100" width="210" fill="#2876F2"></rect>
+		<image x="760" y="460" height="75" width="210" xlink:href="../images/wordpress.png"></image>
+		<image x="760" y="535" height="25" width="210" xlink:href="../images/wordpress-logo.png"></image>
 	</svg>
 </body>
 </html>
